<resources>
    <string name="app_name">Maxiye</string>
    <string name="edit_message">Package name or app name</string>
    <string name="setting">Setting</string>
    <string name="clip_toast">Copied to clipboard</string>
    <string name="not_found">Not Found</string>
    <string name="system_app">System Apps</string>
    <string name="create_db">Create DB</string>
    <string name="share">Share</string>
    <string name="net_set">Network Shortcut</string>
    <string name="send_intent">Send Intent</string>
    <string name="test_nfc">Test NFC</string>
    <string name="test_audio">Test Audio</string>
    <string name="test_camera">Test Camera</string>
    <string name="loading">Loading…</string>
    <string name="test">Test</string>
    <string name="alert_exit">Press once more to exit</string>
    <string name="app_icon">App Icon</string>
    <string name="search">Search</string>
    <string name="test_call">Test Call</string>
    <string name="test_web">Test Web</string>
    <string name="test_map">Test Map</string>
    <string name="test_email">Test Email</string>
    <string name="test_contact">Test Contact</string>
    <string name="test_pic">Test Pick Picture</string>
    <string name="get_gif">Get Pic</string>
    <string name="refresh">Refresh</string>
    <string name="gif_desc">Gif Desc</string>
    <string name="section_format">Hello World from Section: %1$d</string>
    <string name="download">Download</string>
    <string name="change_art_id">Change Article Id</string>
    <string name="switch_web">Switch Web</string>
    <string name="browser_open">Open by Browser</string>
    <string name="history">History</string>
    <string name="delete">Delete</string>
    <string name="prev_page">Pre Page</string>
    <string name="next_page">Next Page</string>
    <string name="page">Page</string>
    <string name="switch_type">Switch Type</string>
    <string name="show_system_apps">Show all applications,including system applications</string>
    <string name="db_action">DB Action</string>
    <string name="backup_db">Backup DB</string>
    <string name="restore_db">Restore DB</string>
    <string name="gprs_alert">GPRS Network ! Continue?</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="gprs_network">GPRS Network!</string>
    <string name="no_internet">Failed to connect the internet</string>
    <string name="alert">Alert</string>
    <string name="free_api">Free Api</string>
    <string name="weather">Weather</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="source_currency">Source Currency</string>
    <string name="target_currency">target_currency</string>
    <string name="exchange">Exchange</string>
    <string name="city">City</string>
    <string name="webview">Webview</string>
    <string name="ip_address">IP Address</string>
    <string name="phone_address">Phone Address</string>
    <string name="id_address">ID Address</string>
    <string name="postcode">Postcode</string>
    <string name="bj_time">BJ Time</string>
    <string name="workday">Workday</string>
    <string name="idcard">ID Card</string>
    <string name="scan_into_fav_db">Scan Files Into Favorite</string>
    <plurals name="scan_fav_tips">
        <item quantity="zero">Scanned %1$d Item</item>
        <item quantity="one">Scanned %1$d Item</item>
        <item quantity="other">Scanned %1$d Items</item>
    </plurals>
    <string name="add_to_fav">Add to Favorites</string>
    <string name="add_successfully">Add Successfully</string>
    <string name="already_in_fav">Already in Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="no_more">No More</string>
    <string name="go_to">Go To</string>
    <string name="fix_fav_file">Fix Favorite Files</string>
    <plurals name="fix_fav_tips">
        <item quantity="zero">Fixed %1$d File</item>
        <item quantity="one">Fixed %1$d File</item>
        <item quantity="other">Fixed %1$d Files</item>
    </plurals>
    <string name="delete_file">Delete File</string>
    <string name="delete_success">Delete Successfully</string>
    <string name="file_is_lost">File does not exist or file is deleted!</string>
    <string name="delete_fav_and_file">Delete Favorite and File</string>
    <string name="input_page">Plz Input the Page Number</string>
    <string name="input_artid">Plz Input the Article Id</string>
    <string name="artid_can_not_be_empty">The article id can not be empty</string>
    <string name="first_page">First Page</string>
    <string name="current_page">Current Page</string>
    <string name="downloading">Downloading…</string>
    <string name="cache_is_lost">Cache file is lost</string>
    <string name="download_success">Download Successfully</string>
    <string name="open">Open</string>
    <string name="download_err">Download Failed</string>
    <string name="back_to_last_page">Back to the last page</string>
    <string name="choose_a_backup">Choose a Backup</string>
    <string name="copy_art_id">Copy Article Id</string>
    <string name="reload_art">Reload Content</string>
    <string name="app_list">APP List</string>
    <string name="one_key_get">Get All Instantly</string>
    <string name="all">All</string>
    <string name="current_type">Current Type</string>
    <string name="bookmark">Bookmark</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="not_existed_bookmark">Bookmark is not existed!</string>
    <string name="back">Back</string>
    <string name="error_tip">Error： %1$s</string>
    <string name="get_all">Get All</string>
    <string name="success_tip">Success： %1$d</string>
    <string name="go_to_last_mark">Reset Location</string>
    <string name="bookmark_opration">Go to Bookmark</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="gradual_color">Gradual Color</string>
    <string name="input">Input</string>
    <string name="gray_bitmap">Gray Bitmap</string>
    <string name="find_repeated_files">Find Repeated Files</string>
    <string name="dot_bitmap">Dot Bitmap</string>
    <string name="reverse_bitmap">Reverse Bitmap</string>
    <string name="dot_bitmap_txt">Dot Bitmap Text</string>
    <string name="single_chan_bitmap">Single Channel Bitmap</string>
    <string name="filter_where">Filter Conditions</string>
    <string name="webdav_user">WebDav Username</string>
    <string name="webdav_user_tip">Setup the username for WebDav</string>
    <string name="webdav_password">WebDav Password</string>
    <string name="webdav_password_tip">Setup the password for WebDav</string>
    <string name="not_set">Not Set</string>
    <string name="last_page">Last Page</string>
    <string name="go_page">Go to Page</string>
    <string name="next_article">Next Article</string>
    <string name="prev_article">Prev Article</string>
    <string name="track_source">Track Origin</string>
    <string name="use_webdav">Webdav Backup</string>
    <string name="use_webdav_tip">Backup your data by Web-Dav</string>
    <string name="duplicate_level">Duplicate Level</string>
    <string name="duplicate_level_tip">The control level when find duplicate images in the favorites,smaller is strictly,default is 32(5 in 64bit-mode).</string>
    <string name="image_meta">Image Meta</string>
    <string name="copy">Copy</string>
    <string name="cmp_256_bit">256-Bit Compare</string>
    <string name="cmp_64_bit">64-Bit Compare</string>
    <string name="proxy">Proxy</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="proxy_shortcut">Proxy Shortcut</string>
    <string name="bitmap">Bitmap</string>
    <string name="transfer">Transfer</string>
    <string name="dot_bitmap_ex">Dot Bitmap Ex</string>
    <string name="api_list">Api List</string>
    <string name="api_list_cfg_tips">Api List Manage</string>
    <string name="renewal">Renewal</string>
    <string name="no_data">No Data</string>
    <string name="api_user">Api Username</string>
    <string name="api_user_tip">Setting Api Username</string>
    <string name="api_password">Api Password</string>
    <string name="api_password_tip">Setting Api Password</string>
    <string name="fetch_api_key">Fetch Api Key</string>
    <string name="refresh_api_key">Refresh Api Key</string>
    <string name="restore_db_from_net">Restore From Net</string>
    <string name="confirm_tip">Confirm ?</string>
    <string name="new_art_not_found">New Art Not Found</string>
</resources>
