<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/white"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/popupwindow_view_ll"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/popup_prev_page"
            style="@style/MyButtonStyle"
            android:text="@string/prev_page"
            android:layout_weight="4"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/popup_page"
            android:textColor="@color/myPrimaryColor"
            android:hint="@string/page"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:gravity="center"
            android:visibility="gone"
            android:imeOptions="actionGo"
            android:inputType="number"/>
        <TextView
            android:id="@+id/popup_total_page"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/popup_next_page"
            style="@style/MyButtonStyle"
            android:text="@string/next_page"
            android:layout_weight="4"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/popupwindow_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
