<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">
    <RelativeLayout
        android:id="@+id/proxy_host_cfg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="UselessParent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/host"
                android:textColor="@color/actionTitle"/>
        </LinearLayout>

        <TextView
            android:id="@+id/proxy_host_view"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_centerVertical="true"
            android:textAlignment="textEnd"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/proxy_port_cfg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/proxy_host_cfg"
        tools:ignore="UselessParent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/port"
                android:textColor="@color/actionTitle"/>
        </LinearLayout>

        <TextView
            android:id="@+id/proxy_port_view"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_centerVertical="true"
            android:textAlignment="textEnd"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/proxy_on_off_cfg"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/proxy_port_cfg"
        tools:ignore="UselessParent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/proxy"
                android:textColor="@color/actionTitle"/>
        </LinearLayout>

        <Switch
            android:id="@+id/proxy_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</RelativeLayout>
